# Sufflk

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml  deploy.yml
data/corpus/daily_reports/: dcr_2026_05_18.md  dcr_2026_05_19.md  dcr_2026_05_20.md
data/corpus/prior_rfis/: rfi_0089.md  rfi_0102.md  rfi_0118.md  rfi_0127.md  rfi_0135.md  rfi_0142.md  rfi_0156.md  rfi_0163.md  rfi_0171.md
data/corpus/specs/: 03_30_00_cast_in_place_concrete.md  04_22_00_concrete_masonry.md  05_12_00_structural_steel.md  07_21_00_thermal_insulation.md  08_11_13_hollow_metal_doors.md
data/samples/: field_notes.json  rfi_inbox.json
docs/: architecture.md  demo-script.md  llmops.md
evals/: rfi_cases.yaml  run_evals.py  scorers.py
infra/: Dockerfile  docker-compose.yml
infra/terraform/: README.md  ecr.tf  ecs.tf  iam.tf  main.tf  opensearch.tf  outputs.tf  variables.tf
scripts/: build_brief_pdf.py  build_resume_pdf.py
src/site_copilot/: __init__.py  config.py  llm.py
src/site_copilot/agents/: __init__.py  base.py  daily_report.py  rfi.py
src/site_copilot/api/: deps.py  main.py
src/site_copilot/notifications/: __init__.py  visitor.py
src/site_copilot/observability/: __init__.py  drift.py  tracing.py
src/site_copilot/rag/: __init__.py  bm25_store.py  chroma_store.py  ingest.py  retriever.py  store.py
src/site_copilot/tools/: __init__.py  registry.py
src/site_copilot/ui/: streamlit_app.py
src/site_copilot/ui/static/: app.js  index.html  (+1 more)
tests/: test_agents_mock.py  test_rag.py
